--- a/DemoMVC/Web.config
+++ b/DemoMVC/Web.config
@@ -14,6 +14,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="AppContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=DemoMVC;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
