--- a/DemoMVC/Web.config
+++ b/DemoMVC/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="AppContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=DemoMVC;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+    <add name="MyContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=DemoMVC;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
