--- a/DemoMVC/DemoMVC.csproj
+++ b/DemoMVC/DemoMVC.csproj
@@ -177,6 +177,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
+    <Compile Include="Service\IMemberService.cs" />
+    <Compile Include="Service\MemberService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
